# cmake-study

./: CMakeLists.txt  tutorial.cpp
MathFunctions/: CMakeLists.txt  add.cpp  div.cpp  mult.cpp  sub.cpp
basic/: CMakelists.txt
install/include/: TutorialConfig.h  head.h
